# dataloggerpy

./: AUTO_CRON_SETUP_README.md  CAMERA_API_SETUP.md  CAMERA_TROUBLESHOOTING.md  CONTINUOUS_DISPLAY_README.md  CP5200_RASPBERRY_PI_GUIDE.md  CRON_FIX_GUIDE.md  CRON_FIX_SUMMARY.md  CRON_QUICK_START.md  CRON_SETUP_README.md  DAILY_SUMMARY_EMAIL_README.md  FINAL_FIX_SUMMARY.md  FIX_CRON_NOW.md  GUARANTEED_CLEAN_SETUP.md  IMPLEMENTATION_SUMMARY.md  IPS-H264.py  IPS-H264NOPLATEONLY.py  LINUX_CRON_FIX_README.md  MEMORY_OPTIMIZATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_FIX_NOW.md  RADAR_AUTO_STARTUP_README.md  RADAR_DATA_READING_EXPLAINED.md  RADAR_SAMPLING_RATE_FIX.md  RADAR_ZERO_VALUES_FIX.md  README.md  README_CP5200_Test.md  README_Python_Builder.md  README_Raspberry_Pi.md  RESTART_SUMMARY.md  SDK_PORT_ANALYSIS.md  SDK_REPLICATION_ANALYSIS.md  SETUP_GUIDE.md  TROUBLESHOOTING_GUIDE.md  VERIFY_SETUP.sh  WINDOWS_DLL_ANALYSIS.md  YOUR_SETUP_README.md  _MConverter.eu_sdk1-10000.md  build_cp5200_python.py  build_for_raspberry_pi.sh  camera_api_listener.py  (+80 more)
CP5200_SDK/: testcp5200.ini
CPower_VCUpdated/: CPower_VC.cpp  CPower_VC.dsp  CPower_VC.dsw  CPower_VC.h  CPower_VC.rc  CPower_VC.vcproj  CPower_VCDlg.cpp  CPower_VCDlg.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
CPower_VCUpdated/res/: CPower_VC.rc2
app/: admin.py  apps.py  camera_service.py  context_processors.py  forms.py  models.py  services.py  services_enhanced.py  shared_state.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_ftpconfig_tcpipconfig_timeconfig.py  0002_radarobjectdetection.py  0003_radarconfig.py  0003_radarobjectdetection_anpr_detected_and_more.py  0004_anprconfig.py  (+26 more)
core/: settings.py
cp5200/: CMakeLists.txt  INSTALL_RaspberryPi.md  Makefile.standalone  QUICK_START_Network.md  README_BUILD.md  README_RaspberryPi.md  build_raspberry_pi.sh  build_raspberry_pi_no_install.sh  cp5200.cpp  cp5200.pc.in  cp5200_README.md  cp5200_czech_plates.py  cp5200_czech_test.py  cp5200_example.py  cp5200_install.py  cp5200_test.c  cp5200_test.py  cp5200_test_makefile  debug_display.cpp  fix_display.cpp  protocol_test.cpp  quick_start.py  simple_example.cpp  simple_test.cpp  test_compilation.sh  test_cp5200.cpp  test_network.py  test_simple.cpp  timeout_test.cpp
cp5200/cp5200/: cp5200.cpp
cp5200/cp5200/nbproject/: Makefile-variables.mk  Package-Debug.bash  configurations.xml  project.xml
cp5200/cp5200/nbproject/private/: configurations.xml  downloads-10.20.30.40-root-22  private.xml  timestamps-10.20.30.40-root-22
cp5200/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Release.bash
cp5200Original/: README.md  SDK_USAGE_GUIDE.md  build_cp5200_python.py  comprehensive_sdk_test.py  corrected_diagnostic.py  cp5200.cpp  cp5200.h  diagnostic_test.py  install.sh  run_all.py  sdk1-10000.docx  simple_diagnostic.py  simple_example.py  test_czech_plates_unified.py  timeout_test.py
data/: radar_radar 3_20250615_163548.json  radar_radar 3_20250615_164514.json  radar_radar 3_20250615_165014.json  radar_radar 3_20251002_211136.json
sendcp5200/: README.md  run_cp5200_display.py  sendcp5200.cpp  setup_raspberry_pi.sh
(+38 files in other folders)
